--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     
     <h1>Happy Birthday BB Tastusi! 🎂</h1>
     
-    <img src="tastusi.png" class="photo" alt="Tastusi">
+    <img src="tastusi.png.PNG" class="photo" alt="Tastusi">
 
     <div class="message">
         <p>GO SHAWTY IT'S YO BIRTHDAY,</p>
