--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            font-family: 'Nunito', 'Quicksand', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            font-family: 'Comic Sans MS', cursive, sans-serif;
             text-align: center;
             background: #fff0f5;
             color: #ff1493;
@@ -14,14 +14,12 @@
             position: relative;
             min-height: 100vh;
             -webkit-text-size-adjust: 100%;
-            line-height: 1.5;
         }
         h1 {
-            font-size: clamp(1.8rem, 5vw, 2.2rem);
+            font-size: 2.2em;
             text-shadow: 1px 1px 3px pink;
             margin: 10px 0;
             line-height: 1.3;
-            font-weight: 700;
         }
         .photo {
             width: 85%;
@@ -46,7 +44,7 @@
             box-shadow: 0 3px 5px rgba(0,0,0,0.1);
             position: relative;
             z-index: 1;
-            font-size: 1rem;
+            font-size: 0.95em;
         }
         .secret-message {
             display: none;
@@ -58,8 +56,8 @@
             margin: 15px auto;
             position: relative;
             z-index: 1;
-            line-height: 1.6;
-            font-size: 0.95rem;
+            line-height: 1.5;
+            font-size: 0.9em;
         }
         .secret-trigger {
             cursor: pointer;
@@ -73,7 +71,7 @@
             padding: 10px 18px;
             border-radius: 50px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            font-size: 0.95rem;
+            font-size: 0.95em;
             width: 80%;
             max-width: 300px;
         }
@@ -91,7 +89,7 @@
             text-align: center;
             border: 3px dashed white;
             box-shadow: 0 3px 6px rgba(0,0,0,0.2);
-            font-size: 0.95rem;
+            font-size: 0.95em;
         }
         button {
             background: #ff69b4;
@@ -99,19 +97,18 @@
             border: none;
             padding: 10px 18px;
             border-radius: 5px;
-            font-size: 0.95rem;
+            font-size: 0.95em;
             cursor: pointer;
             margin: 10px auto;
             display: block;
             width: 80%;
             max-width: 200px;
-            font-weight: 600;
         }
         .trick-button:hover, button:hover {
             transform: scale(1.05);
         }
         .trick-subtext {
-            font-size: 0.8rem;
+            font-size: 0.75em;
             opacity: 0.7;
             margin-top: 5px;
         }
@@ -148,8 +145,6 @@
             user-select: none;
         }
     </style>
-    <!-- Add Google Fonts for better typography -->
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&family=Quicksand:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Floating Hearts Background -->
@@ -188,7 +183,7 @@
         Happy birthday, habibi tastusi! It's your first birthday after we became each other's cutie patootie pookies UWU❤❤. I'm not good with making stuff for birthdays and cards and stuff like that, but I mean, I'm trying babe chillluhhhhh!!<br><br>
         anyway tastusi, ur 19 now hehe, ik ur losing ur victim card cz everyday ur getting further away from ur ideal life stage "MINOR", u should be happy tho cz if that didnt happen you'd be literally dead<br><br>
         ig i shouldnt say this for a birthday letter, anyway luvluvi, ur so lovely cutie patootie and easily loved by literally everyone, anyone who gets to know my bb literally falls for that perfect ahh personality (im the first victim), and them eyes.... OHH MAHH GAHHD dont even get me started i love them, idk if i told you b4 but dyk what my grandma used to tell me, "fall in love with the eyes, they never change" and so i did, and not just the eyes bb ur literally perfect i love everything about u and somehow i was lucky enough to pull the MIGHTY TASTUSI HERSELF!!😱😱<br><br>
-        also bb i'm so proud of u, even tho ur still young af ur so responsible AKA "ur so mature for age🫦", u have a whole ass job u do great in college u help ur family sm and you love helping people in general it doesnt matter who<br><br>
+        also bb i'm so proud of u, even tho ur still young af ur so responsible AKA "ur so mature for ur age🫦", u have a whole ass job u do great in college u help ur family sm and you love helping people in general it doesnt matter who<br><br>
         ily sooooo much tastusi and i hope this year will be sooo good to u, my eid was two eids this years cz its my bbs birthday too, I hope allllllll ur dreams come true and may Allah make u happy all the time, ilysm and sorry u had to read all that mb mb👉🏼👈🏼
     </div>
 
