--- a/index.html
+++ b/index.html
@@ -178,12 +178,11 @@
     </div>
     
     <div class="secret-message">
-        so basically i've never done this b4, and ig im making a website or smth rn to say happy birthday to my bb tastusi, chatgpt gave me tons of ideas and a hidden message was on of them, i liked the idea and here i am doing it 😎<br><br>
-        mb that was so much talking, i should be talking about ur birthday tf am i doing <br><br>
+        so basically i've never done this b4, and ig im making a website or smth rn to say happy birthday to my bb tastusi😎<br><br>
         Happy birthday, habibi tastusi! It's your first birthday after we became each other's cutie patootie pookies UWU❤❤. I'm not good with making stuff for birthdays and cards and stuff like that, but I mean, I'm trying babe chillluhhhhh!!<br><br>
         anyway tastusi, ur 19 now hehe, ik ur losing ur victim card cz everyday ur getting further away from ur ideal life stage "MINOR", u should be happy tho cz if that didnt happen you'd be literally dead<br><br>
-        ig i shouldnt say this for a birthday letter, anyway luvluvi, ur so lovely cutie patootie and easily loved by literally everyone, anyone who gets to know my bb literally falls for that perfect ahh personality (im the first victim), and them eyes.... OHH MAHH GAHHD dont even get me started i love them, idk if i told you b4 but dyk what my grandma used to tell me, "fall in love with the eyes, they never change" and so i did, and not just the eyes bb ur literally perfect i love everything about u and somehow i was lucky enough to pull the MIGHTY TASTUSI HERSELF!!😱😱<br><br>
-        also bb i'm so proud of u, even tho ur still young af ur so responsible AKA "ur so mature for ur age🫦", u have a whole ass job u do great in college u help ur family sm and you love helping people in general it doesnt matter who<br><br>
+        ig i shouldnt say this for a birthday letter, anyway luvluvi, ur so lovely cutie patootie and easily loved by literally everyone, anyone who gets to know my bb literally falls for that perfect ahh personality (im the first victim), and them eyes.... OHH MAHH GAHHD dont even get me started i love them, idk if i told you b4 but dyk what my grandma used to tell me? "fall in love with the eyes, they never get old" and so i did, and not just the eyes bb ur literally perfect i love everything about u and idek how i was lucky enough to pull the MIGHTY TASTUSI HERSELF!!😱😱<br><br>
+        also bb i'm so proud of u, even tho ur still young af ur so responsible AKA "ur so mature for ur age🫦", u have a whole ass job u do great in college u help ur family sm and you love helping people in general regradless who<br><br>
         ily sooooo much tastusi and i hope this year will be sooo good to u, my eid was two eids this years cz its my bbs birthday too, I hope allllllll ur dreams come true and may Allah make u happy all the time, ilysm and sorry u had to read all that mb mb👉🏼👈🏼
     </div>
 
