--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
     <!-- FLOATING HEART EASTER EGG -->
     <div style="position: fixed; bottom: 15px; right: 15px; font-size: 1.8em; cursor: pointer;" 
-         onclick="alert('No matter where you click, I love you most! 💘')">
+         onclick="alert('I love you most! 💘')">
         ♡
     </div>
 
