--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <!-- Floating Hearts Background -->
     <div id="hearts-container"></div>
     
-    <h1>Happy Birthday BB Tastusi! 🎂</h1>
+    <h1>Happy Birthday BB Tastusi ! 🎂💖</h1>
     
     <img src="tastusi.png.PNG" class="photo" alt="Tastusi">
 
