--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
 
     <div class="message">
         <p>GO SHAWTY IT'S YO BIRTHDAY,</p>
-        <p>Dear Tastusi,<br>
-        I hope this website finds you well, I LOVE YOU <3.<br>
+        <p>Dear Tastusi,<br><br>
+        I hope this email finds you well, I LOVE YOU <3.<br><br>
         ur khaskhusi</p>
         
         <!-- CLICKABLE SURPRISE BUTTON -->
